# hydro_bsc_project

./: CMakeLists.txt  Cell.cpp  Cell.h  LICENSE.txt  Mesh.cpp  Mesh.h  Mesh.tpp  README.md  Solver.cpp  Solver.h  Solver.tpp  main.cpp  visualization.ipynb
cell_types/: Cell.h  Conway_Cell.cpp  Conway_Cell.h  Point.h  Q_Cell.cpp  Q_Cell.h
figures/: 11_shock_tube_density.tiff  11_shock_tube_pressure.tiff  11_shock_tube_velocity.tiff  _12_shock_tube_1D_1st_MUSCL_TVD.tiff  circle_advect_cartesian.md  circle_advect_log.md  circle_advect_voronoi.md  swe_africa_europe.md
older_weeks/figures/: 10_MUSCL_gaussians250-125 (verschoben).tiff  10_first_order_gaussians250-125 (verschoben).tiff  11_custom_boundary_plot-79.tiff  92nd_order_2D_cartesian-94 (verschoben).tiff  _12_shock_tube_vornoi_diagonal.tiff
older_weeks/readme_progress_reports/: README_Week1.md  README_Week10.md  README_Week11.md  README_Week12.md  README_Week2.md  README_Week5.md  README_Week6.md  README_Week7.md  README_Week8.md  README_Week9.md
readme_progress_reports/: README_Week2.md  README_Week3.md
src/: CMakeLists.txt  DG_Solver.h  DG_Solver.tpp  Mesh.h  Mesh.tpp  Solver.h  Solver.tpp  main.cpp  vis_tk.py  visualization.ipynb
src/cell_types/: Cell.cpp  Cell.h  Conway_Cell.cpp  Conway_Cell.h  DG_Q_Cell.cpp  DG_Q_Cell.h  Euler_Cell.cpp  Euler_Cell.h  Point.cpp  Q_Cell.cpp  Q_Cell.h  SWE_Cell.cpp  SWE_Cell.h
src/utilities/: Functions.cpp  Functions.h
src/vmp/: Halfplane.h  VoronoiCell.cpp  VoronoiCell.h
vmp/: Halfplane.cpp  VoronoiMesh.cpp  VoronoiMesh.h
